FLUID-4770: Resolved Browse Files Button misalignment in Uploader

--- a/src/components/uploader/css/Uploader.css
+++ b/src/components/uploader/css/Uploader.css
@@ -243,6 +243,7 @@ tr.fl-uploader-file-state-uploaded button:before {
     height: 2em;
     width: 7em;
     cursor: default;
+    padding-right: 30px;
 }
 
 /* Fake add files button wrapper ("Add more")
